# veil-proxy

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.ja.md  README.md  SECURITY.md  build.rs  clippy.toml  config.toml  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml  container-security-nightly.yml
.semgrep/: veil-rules.yml
benches/: cache.rs  compression.rs  connection_pool.rs  http2.rs  http3.rs  latency.rs  load_balancing.rs  memory.rs  routing.rs  throughput.rs  tls.rs  wasm.rs  websocket.rs
contrib/config/: config.toml
contrib/systemd/: veil.service
crates/nghttp3-sys/: Cargo.toml  README.md  build.rs
crates/nghttp3-sys/src/: bindings.rs  lib.rs  wrapper.h
crates/ngtcp2-sys/: Cargo.toml  README.md  build.rs
crates/ngtcp2-sys/src/: bindings.rs  lib.rs  wrapper.h
docker/: .gitignore  Dockerfile.glibc  Dockerfile.glibc.aarch64  Dockerfile.musl  Dockerfile.musl.aarch64  README.md  build.sh
docker/assets/conf.d/: config.toml
docker/assets/security/: seccomp-epoll.json  seccomp.json
docker/assets/wasm/: passthrough_filter.wasm
docker/assets/www/: index.html
docker/perf/: gen_configs.py  run_perf.sh
docker/perf/configs/: no_ktls_ofc.toml  ofc.toml
docker/perf/nginx/: nginx.conf
docs/artifacts/: e2e_fix_session_20260620.md  failed_tests_report.md  implemented_test_cases.md  missing_test_cases.md  performance_report_veil_vs_nginx_v3.md  required_test_cases.md  security_test_failures.md  security_test_gap_analysis.md  security_test_implemented_cases.md  security_test_required_cases.md  test_coverage_report.md
docs/artifacts/perf_test/: generate_configs.py
docs/backlog/: backlog.md
docs/backlog/bugs/: B-01-iouring-accept-nonblock.md  B-02-408-connection-not-closed.md  B-03-header-size-check-includes-body.md  B-04-wasm-filter-missing-https-path.md  B-05-wasm-modules-thread-local-race.md  B-06-grpc-h2c-trailer-not-forwarded.md  B-07-iouring-future-drop-uaf.md  B-08-http2-read-buffer-corruption.md  B-09-l4-forward-writes-full-buffer.md  B-10-e2e-parallel-shared-state-flaky.md  B-11-expect-100-continue-intermittent-hang.md  B-12-http3-request-body-streaming-stall.md  B-13-seccomp-faccessat2-static-404.md  (+36 more)
docs/perf/: README.md  history.md  perf_f112_coverage_regression.md  perf_f114_coverage_regression.md  perf_f115_stage2_b43.md  protocol_extended_results.md  results_raw.tsv  results_summary.md  v0.6.0_platform_verification.md
docs/readme/: README.ja.md
examples/: config.toml
examples/wasm-filters/: README.md
examples/wasm-filters/http-call-filter/: Cargo.toml
examples/wasm-filters/http-call-filter/src/: lib.rs
examples/wasm-filters/passthrough-filter/: Cargo.toml
examples/wasm-filters/passthrough-filter/src/: lib.rs
examples/wasm-filters/waf-filter/: Cargo.toml  README.md
examples/wasm-filters/waf-filter/src/: crs_level1.rs  crs_level2.rs  crs_level3.rs  lib.rs  rules.rs
fuzz/: .gitignore  Cargo.toml
fuzz/artifacts/hpack_decode/: crash-1447d26f0d35748fff13c48577206bc40c2227c3
fuzz/fuzz_targets/: config_toml.rs  grpc_frame_decode.rs  hpack_decode.rs  http2_frame_decode.rs  http3_frame_decode.rs  http_header_validate.rs  http_request_smuggling.rs  io_uring_executor.rs  qpack_decode.rs  wasm_abi.rs  wasm_host_abi.rs
fuzz/regression_corpus/: README.md
fuzz/regression_corpus/hpack_decode/: b21_huffman_shift_panic
packaging/: Dockerfile.package  Dockerfile.test  Dockerfile.test-al2023  README.md  build-deb.sh  build.sh  test-docker-install-rpm.sh  test-docker-install.sh  test-install.sh
packaging/rpm/: veil.spec
packaging/scripts/: build-bsd.sh  build-cross.sh  build.sh  postinstall.sh  preuninstall.sh  test-deb.sh  test-install.sh  test-rpm.sh
src/: access_log.rs  config.rs  constants.rs  entry.rs  fuzz_api.rs  http3_server.rs  http3_stream.rs  http3_wire.rs  http_utils.rs  ktls.rs  ktls_freebsd.rs  ktls_rustls.rs  legacy_bin_tests.rs  lib.rs  logging.rs  main.rs  metrics.rs  otel.rs  pool.rs  proxy.rs  resilience.rs  security.rs  server.rs  simple_tls.rs  stream_channel.rs  system.rs  tls_provider.rs  tls_reload.rs  upstream.rs
src/buffering/: config.rs  handler.rs  mod.rs
src/cache/: config.rs  disk.rs  entry.rs  file_cache.rs  index.rs  key.rs  manager.rs  memory.rs  mod.rs  policy.rs  revalidation.rs
src/grpc/: compression.rs  framing.rs  headers.rs  mod.rs  status.rs  stream.rs  web.rs
src/http2/: client.rs  connection.rs  error.rs  mod.rs  settings.rs  stream.rs
src/http3/: common.rs  mod.rs  stream.rs
src/l4/: health.rs  mod.rs  proxy.rs  server.rs  udp.rs
src/protocol/: mod.rs  negotiation.rs
src/routing/: mod.rs
src/runtime/: buf.rs  executor.rs  handle.rs  io.rs  mod.rs  offload.rs  ring.rs  splice.rs  tcp.rs  timer.rs  udp.rs
src/udp/: socket.rs
src/wasm/: capabilities.rs  constants.rs  context.rs  engine.rs  grpc_integration.rs  http_executor.rs  integration.rs  mod.rs  persistent_context.rs  queue_notify.rs  registry.rs  tests.rs  tick_manager.rs  types.rs
tests/: README.md  config_proptest.rs  e2e_setup.sh  e2e_tests.rs  integration_tests.rs  routing_proptest.rs  run_bench.sh  runtime_cancellation_test.rs
tests/common/: grpc_client.rs  grpc_client_v2.rs  http1_client.rs  http2_client.rs  http3_client.rs  http3_client_v2.rs  mod.rs
tests/container_security/: .gitignore  README.md  run.sh  run_h2spec.sh
tests/fixtures/: proxy.pid  proxy_health.json
tests/grpc_server/: Cargo.toml  build.rs
tests/grpc_server/.cargo/: config.toml
tests/grpc_server/src/: main.rs
tests/load/: README.md  compare.sh  k6_load.js  run_load.sh
tests/proto/: test_service.proto
tests/test_backends/: Cargo.toml
tools/: README.md  gen_huffman_decode_table.py
tools/container_security/: .gitignore  README.md  run.sh
tools/container_security/harness/tools/: Cargo.toml
tools/oss-fuzz/: Dockerfile  README.md  build.sh  project.yaml
tools/perf/: .gitignore  README.md  analyze_results.sh  gen_configs.sh  run_perf.sh
tools/qemu/: README.md  aarch64-vm.sh  bsd-arm64-provision.py  fbsd-arm64-smoke.sh  fbsd-arm64-vm.sh  fbsd-capmode-e2e.sh  run-e2e-aarch64.sh
(+370 files in other folders)
