[package]
name = "veil-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tempfile = "3.24.0"
veil = { path = "..", features = ["http2"] }

[[bin]]
name = "hpack_decode"
path = "fuzz_targets/hpack_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "config_toml"
path = "fuzz_targets/config_toml.rs"
test = false
doc = false
bench = false

[[bin]]
name = "http2_frame_decode"
path = "fuzz_targets/http2_frame_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "http_header_validate"
path = "fuzz_targets/http_header_validate.rs"
test = false
doc = false
bench = false