[package]
name = "veil-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tempfile = "3.24.0"
veil = { path = "..", features = ["http2", "grpc"] }

[features]
# wasm_abi ターゲット用の passthrough。既定ビルドに wasmtime を強制しないため
# opt-in（`cargo fuzz run wasm_abi --features wasm`）。
wasm = ["veil/wasm"]

[[bin]]
name = "hpack_decode"
path = "fuzz_targets/hpack_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "config_toml"
path = "fuzz_targets/config_toml.rs"
test = false
doc = false
bench = false

[[bin]]
name = "http2_frame_decode"
path = "fuzz_targets/http2_frame_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "http_header_validate"
path = "fuzz_targets/http_header_validate.rs"
test = false
doc = false
bench = false

[[bin]]
name = "http_request_smuggling"
path = "fuzz_targets/http_request_smuggling.rs"
test = false
doc = false
bench = false

[[bin]]
name = "io_uring_executor"
path = "fuzz_targets/io_uring_executor.rs"
test = false
doc = false
bench = false

[[bin]]
name = "wasm_abi"
path = "fuzz_targets/wasm_abi.rs"
test = false
doc = false
bench = false

[[bin]]
name = "wasm_host_abi"
path = "fuzz_targets/wasm_host_abi.rs"
test = false
doc = false
bench = false
[[bin]]
name = "grpc_frame_decode"
path = "fuzz_targets/grpc_frame_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "http3_frame_decode"
path = "fuzz_targets/http3_frame_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "qpack_decode"
path = "fuzz_targets/qpack_decode.rs"
test = false
doc = false
bench = false
