[workspace]

[package]
name = "grpc-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.40", features = ["full"] }
async-stream = "0.3"
futures-core = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"
