[package]
name = "http-call-filter"
version = "0.1.0"
edition = "2021"
description = "Proxy-Wasm filter that dispatches an HTTP call (Pause/resume) for veil-proxy (F-62)"

[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2"
log = "0.4"

[profile.release]
lto = true
opt-level = "s"

# Exclude from parent workspace
[workspace]
