[package]
name = "passthrough-filter"
version = "0.1.0"
edition = "2021"
description = "Minimal pass-through Proxy-Wasm filter for measuring wasmtime runtime overhead (F-89)"

[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2"

[profile.release]
lto = true
opt-level = "s"

# Exclude from parent workspace
[workspace]
