[package]
name = "waf-filter"
version = "0.1.0"
edition = "2021"
description = "Web Application Firewall Proxy-Wasm filter for veil-proxy"

[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
lazy_static = "1.4"

[profile.release]
lto = true
opt-level = "s"

[workspace]
