# container_security ハーネス用の外形検証ツール。
# 旧 Python スクリプト（fuzz_http.py / bad_backend_server.py）を Rust へ置換したもの。
# HTTP/3・WebSocket プローブ用に quiche/rustls を追加（P-03 / P-09）。
[workspace]

[package]
name = "veil-sec-tools"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "fuzz-http"
path = "src/bin/fuzz-http.rs"

[[bin]]
name = "bad-backend"
path = "src/bin/bad-backend.rs"

[[bin]]
name = "http3-client"
path = "src/bin/http3-client.rs"

[[bin]]
name = "ws-probe"
path = "src/bin/ws-probe.rs"

[dependencies]
# ハーネス単体ビルドでは vendored BoringSSL を使用（veil 本体の aws-lc 共有は不要）
quiche = { version = "=0.24.6", default-features = false, features = ["boringssl-vendored"] }
getrandom = "0.2"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }

[profile.release]
opt-level = 2
